--- a/packages/security/cover_garage_doors.yaml
+++ b/packages/security/cover_garage_doors.yaml
@@ -65,27 +65,27 @@ alert:
     skip_first: true  # Optional, false is the default
     notifiers:
       - notify_garagedoor_front
-  garage_door_back:
-    name: Back Garage Door is open
-    #done_message: Back Garage is closed
-    #entity_id: binary_sensor.back_garage_door
-    entity_id: input_boolean.back_garage_after_dark
-    state: 'on'   # Optional, 'on' is the default value
-    repeat:
-      - 15
-      - 30
-      - 60
-    skip_first: true  # Optional, false is the default
-    notifiers:
-      - notify_garagedoor_back
+  # garage_door_back:
+  #   name: Back Garage Door is open
+  #   #done_message: Back Garage is closed
+  #   #entity_id: binary_sensor.back_garage_door
+  #   entity_id: input_boolean.back_garage_after_dark
+  #   state: 'on'   # Optional, 'on' is the default value
+  #   repeat:
+  #     - 15
+  #     - 30
+  #     - 60
+  #   skip_first: true  # Optional, false is the default
+  #   notifiers:
+  #     - notify_garagedoor_back
 
 command_line:
   - notify:
       name: notify_garagedoor_front
       command: "/config/ha_to_api_notify_cover.sh script.notify_garagedoor_front"
-  - notify:
-      name: notify_garagedoor_back
-      command: "/config/ha_to_api_notify_cover.sh script.notify_garagedoor_back"
+   # - notify:
+   #     name: notify_garagedoor_back
+   #     command: "/config/ha_to_api_notify_cover.sh script.notify_garagedoor_back"
 
 ### Scripts
 script:
@@ -109,26 +109,26 @@ script:
                   value: Leave it
                   name: 'anything_just_not_blank'
                   type: button
-  notify_garagedoor_back:
-    sequence:
-      - service: script.notify_slack
-        data_template:
-          channel: "C012KCJ9YJ0"
-          message: "The Back Garage door is open."
-          attachments:
-            - title: Close the Back Garage door?
-              callback_id: cover_left_open_callback
-              color: '#03a9f4'
-              attachment_type: default
-              actions:
-                - text: Close it
-                  value: Close it
-                  name: 'cover.garage_door_back'
-                  type: button
-                - text: Leave it
-                  value: Leave it
-                  name: 'anything_just_not_blank'
-                  type: button
+   # notify_garagedoor_back:
+   #   sequence:
+   #     - service: script.notify_slack
+   #       data_template:
+   #         channel: "C012KCJ9YJ0"
+   #         message: "The Back Garage door is open."
+   #         attachments:
+   #           - title: Close the Back Garage door?
+   #             callback_id: cover_left_open_callback
+   #             color: '#03a9f4'
+   #             attachment_type: default
+   #             actions:
+   #               - text: Close it
+   #                 value: Close it
+   #                 name: 'cover.garage_door_back'
+   #                 type: button
+   #               - text: Leave it
+   #                 value: Leave it
+   #                 name: 'anything_just_not_blank'
+   #                 type: button
 
 group:
   garage_doors:
@@ -142,9 +142,9 @@ input_boolean:
   front_garage_after_dark:
     name: Front Garage Open After Dark
     icon: mdi:message-alert
-  back_garage_after_dark:
-    name: Back Garage Open After Dark
-    icon: mdi:message-alert
+   # back_garage_after_dark:
+   #   name: Back Garage Open After Dark
+   #   icon: mdi:message-alert
 
 automation:
   # If garage doors are closed kick off script to turn them off, and turn off alert.
@@ -181,34 +181,34 @@ automation:
         entity_id: input_boolean.front_garage_after_dark
 
   # If garage doors are closed kick off script to turn them off, and turn off alert.
-  - id: back_garage_closed
-    alias: Back Garage Closed
-    initial_state: true
-    trigger:
-      - platform: state
-        entity_id: binary_sensor.back_garage_door
-        from: 'on'
-        to: 'off'
-    action:
-      #- service: script.driveway_off
-      - service: input_boolean.turn_off
-        data:
-          entity_id: input_boolean.back_garage_after_dark
+  # - id: back_garage_closed
+  #   alias: Back Garage Closed
+  #   initial_state: true
+  #   trigger:
+  #     - platform: state
+  #       entity_id: binary_sensor.back_garage_door
+  #       from: 'on'
+  #       to: 'off'
+  #   action:
+  #     #- service: script.driveway_off
+  #     - service: input_boolean.turn_off
+  #       data:
+  #         entity_id: input_boolean.back_garage_after_dark
 
   # If garage is still open at 10:30pm turn on alart to make sure it get closed.
-  - id: back_close_garage_lights_out
-    alias: Close Back Garage at lights out
-    initial_state: true
-    trigger:
-      - platform: time
-        at: '20:00:00'
-      - platform: state
-        entity_id: binary_sensor.back_garage_door
-        to: 'on'
-    condition:
-      - condition: state
-        entity_id: binary_sensor.back_garage_door
-        state: "on"
-    action:
-      - service: input_boolean.turn_on
-        entity_id: input_boolean.back_garage_after_dark
+  # - id: back_close_garage_lights_out
+  #   alias: Close Back Garage at lights out
+  #   initial_state: true
+  #   trigger:
+  #     - platform: time
+  #       at: '20:00:00'
+  #     - platform: state
+  #       entity_id: binary_sensor.back_garage_door
+  #       to: 'on'
+  #   condition:
+  #     - condition: state
+  #       entity_id: binary_sensor.back_garage_door
+  #       state: "on"
+  #   action:
+  #     - service: input_boolean.turn_on
+  #       entity_id: input_boolean.back_garage_after_dark
