Add automatic Zigbee2MQTT firmware updates and reorganize documentation
- Add zigbee2mqtt_auto_update.yaml with daily OTA firmware updates at 19:30
- Auto-dismissing notification when updates complete (similar to Shelly pattern)
- Refactor AGENTS.md to reference separate documentation files
- Add structured docs: code-style, common-patterns, response-style, safety-guidelines, troubleshooting
- Update .gitignore for core directory and bambulab prints
- Comment out unused Shelly Gen2 discovery automations

--- a/.gitignore
+++ b/.gitignore
@@ -105,6 +105,7 @@ venv.bak/
 .mypy_cache/
 
 # home assistant
+core
 
 ## You can whitelist files/folders with !, these will not be ignored.
 !*.yaml
@@ -151,3 +152,6 @@ solcast-sites.json
 solcast-usage.json
 solcast-undampened.json
 .aider*
+
+# bambulab stuffs
+www/media/ha-bambulab/00M09A363000342/prints/*
