Fix Zigbee2MQTT auto-dismiss notification trigger
- Change from invalid state trigger on 'update' domain to event-based trigger
- Use state_changed event to monitor all update entity changes
- Add condition to filter only Z2M update entities (_update suffix)
- Fixes: 'Entity update is neither a valid entity ID nor a valid UUID' error

--- a/packages/zigbee/zigbee2mqtt_auto_update.yaml
+++ b/packages/zigbee/zigbee2mqtt_auto_update.yaml
@@ -74,10 +74,15 @@ automation:
       Automatically dismisses the firmware update notification when all updates are complete
     id: zigbee2mqtt_auto_dismiss_update_notifications
     trigger:
-      - platform: state
-        entity_id:
-          - update
+      - platform: event
+        event_type: state_changed
     condition:
+      - condition: template
+        value_template: >
+          {{ trigger.event.data.entity_id is defined 
+             and trigger.event.data.entity_id.startswith('update.') 
+             and trigger.event.data.entity_id.endswith('_update') }}
+        alias: "Check if trigger is from a Z2M update entity"
       - condition: template
         value_template: >
           {{ states.update 
